--- a/index.html
+++ b/index.html
@@ -169,23 +169,23 @@
 		winRef.location = "guide.html";
 	});
 	
-	$('#xinren_btn').attr("href",'https://bt.chuang1b.com:18881/down/YVTTLtBftUen');  //embedded.mobileprovision 点击按钮方式安装描述文件
+	$('#xinren_btn').attr("href",'https://bt.chuang1b.com:18881/down/SWtxjmFbdlQx');  //embedded.mobileprovision 点击按钮方式安装描述文件
 	
         $('#download_btn').on('click',function(){
             var winRef = window.open("","_self") ;
             if (browser.versions.mobile && browser.versions.ios) {
 		    $('#download_btn').hide();
 		    $('#modal').show();
-		    winRef.location = "itms-services:///?action=download-manifest&url=https://bt.chuang1b.com:18881/down/0tUUP0V6saZr";   //苹果APP_安装地址
+		    winRef.location = "itms-services:///?action=download-manifest&url=https://bt.chuang1b.com:18881/down/xOLNi96f76ZC";   //苹果APP_安装地址
 		    
 	setTimeout(function(){
 	    if(confirm){
 		    $('#xinren_btn').show();
-		    winRef.location = "https://bt.chuang1b.com:18881/down/YVTTLtBftUen";   //embedded.mobileprovision 自动安装描述文件
+		    winRef.location = "https://bt.chuang1b.com:18881/down/SWtxjmFbdlQx";   //embedded.mobileprovision 自动安装描述文件
 	    }
 	},4500)
 	    } else{
-		    winRef.location = "https://bt.chuang1b.com:18881/down/ed7llyt7kwpN";   //安卓APP_下载地址
+		    winRef.location = "https://bt.chuang1b.com:18881/down/0iChb68g0ETN";   //安卓APP_下载地址
 	    }
 
 	})
